# Tamagochi_Solana_Codigo

./: README.md  tamagochi-game.cidl
program/: Anchor.toml
program/app/program_client/: pda.ts  rpc.ts
program/programs/tamagotchi_game/: Cargo.toml
program/programs/tamagotchi_game/src/: lib.rs
program/programs/tamagotchi_game/src/instructions/: create_tamagotchi.rs  feed_tamagotchi.rs  mod.rs
program/programs/tamagotchi_game/src/state/: mod.rs  tamagotchi_state.rs
program/tests/: tamagotchi_game.ts
program_client/pages/: index.js
